# bumpa-rct-app

./: .dockerignore  .env.example  .gitignore  CODEX.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  bumpabestie-buildplan.md  compose.prod.yaml  compose.yaml  design-qa.md
apps/api/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  admin_contracts.py  main.py  onboarding_contracts.py  openapi_contract.py  schemas.py
apps/api/scripts/: verify_postgres_rls.py
apps/api/tests/: conftest.py  test_admin_operations.py  test_api_schema_visibility.py  test_async_runtime.py  test_audit_request_context.py  test_auth_and_isolation.py  test_bumpa_boundary_revision.py  test_bumpa_canonical_metrics_migration.py  test_bumpa_dataset_failure_migration.py  test_bumpa_degraded_async.py  test_bumpa_live_provider.py  test_bumpa_store_context_migration.py  test_bumpa_sync_completion.py  test_business_flows.py  test_chat_pagination.py  test_chat_pagination_migration.py  test_config_and_security.py  test_dead_letter_operations.py  test_field_key_rotation.py  test_hermes_control_server.py  test_hermes_integration.py  test_jobs_health.py  test_launch_security.py  test_mcp_lifecycle.py  test_meta_provider.py  test_onboarding_cli.py  test_onboarding_migration.py  test_onboarding_routes.py  test_onboarding_saga.py  test_openapi_contract.py  test_operational_retention.py  test_operational_retention_migration.py  test_platform_access.py  test_platform_admins.py  test_proactive_insights_and_alerts.py  (+16 more)
docs/: runbook.md  (+14 more)
(+367 files in other folders)
