[project]
name = "bumpabestie-api"
version = "0.1.0"
description = "Bumpa Bestie control-plane API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "sqlalchemy>=2.0.35,<3",
  "alembic>=1.13,<2",
  "psycopg[binary]>=3.2,<4",
  "pyjwt>=2.9,<3",
  "cryptography>=48.0.1,<49",
  "httpx>=0.27,<1",
  "redis>=5.2,<6",
  "python-multipart>=0.0.12,<1",
  "email-validator>=2.2,<3",
  "reportlab>=4.2,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-cov>=5,<7",
  "mypy>=1.11,<2",
  "ruff>=0.7,<1",
  "pypdf>=5,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]
ignore = ["B008", "E501", "S101", "S105"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_generics = false
plugins = ["pydantic.mypy"]
exclude = ["alembic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --disable-warnings"

[tool.coverage.run]
source = ["app"]
branch = true
